@@ -1,4 +1,8 @@
 
+2017-09-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* cobc.c: ensure correct order of the programs during processing
+
 2017-09-18  Ron Norman <rjn@inglenet.com>
 
 	* codegen.c:
